Fix layout bug as map not as default

--- a/django_project/rir_dashboard/static/css/dashboard/base.css
+++ b/django_project/rir_dashboard/static/css/dashboard/base.css
@@ -5,7 +5,7 @@ html, body {
 
 :root {
     --navigation-width: 200px;
-    --header-height: 62px;
+    --header-height: 43px;
 }
 
 .row {
@@ -47,7 +47,7 @@ html, body {
     background: white;
     height: var(--header-height);
     font-weight: 600;
-    padding: 18px 20px 18px 30px;
+    padding: 10px 20px 10px 30px;
     position: absolute;
     top: 0;
     left: 0;
