--- a/django_project/rir_dashboard/static/css/dashboard/context-analysis.css
+++ b/django_project/rir_dashboard/static/css/dashboard/context-analysis.css
@@ -13,6 +13,7 @@
 
 #content-view {
     height: 100%;
+    overflow-y: hidden;
 }
 
 .green-button {
@@ -52,11 +53,25 @@
 #indicator table.full-screen th,
 #indicator table.full-screen td {
     border: 2px solid white;
-    padding: 10px 15px;
+    padding: 5px 10px;
 }
 
 #indicator table.full-screen legend {
     display: none !important;
+}
+
+#indicator table.full-screen .divider {
+    display: none !important;
+}
+
+#indicator table.full-screen .group-name .row {
+    color: black !important;
+    background-color: white !important;
+    font-weight: 600;
+}
+
+#indicator table.full-screen .group-row .indicator-name {
+    padding: 5px 10px 5px 20px;
 }
 
 
@@ -78,6 +93,10 @@
 
 #indicator table .row {
     margin: 0;
+}
+
+#indicator table .divider td {
+    margin-bottom: 5px
 }
 
 #indicator .indicator-name .col {
@@ -122,11 +141,20 @@
     width: 200px;
 }
 
+
 #content-view .scenario-header,
 #content h3 {
     font-size: 14px;
     padding: 10px 10px 11px 10px;
     font-weight: 600;
+}
+
+#content-view .scenario-header {
+    margin-bottom: 1px;
+}
+
+#page.shrink .scenario-header {
+    padding: 10px 10px 11px 25px;
 }
 
 #content h3 {
@@ -150,6 +178,8 @@
 
 #content-view .scenario-section {
     display: none;
+    height: 100%;
+    overflow-y: auto;
 }
 
 #content-view .intervention {
@@ -158,9 +188,11 @@
 
 /* FOR MAP */
 #map-wrapper {
+    opacity: 0;
     height: 100%;
     position: relative;
     overflow: hidden !important;
+    display: block !important;
 }
 
 #map {
@@ -180,7 +212,7 @@
 #left-side .side-panel-button {
     right: -35px;
     position: absolute;
-    top: 42px;
+    top: 43px;
 }
 
 #left-side .side-panel-toggle-button {
@@ -542,12 +574,16 @@
 }
 
 #indicator .group-name td {
-    margin-top: 1px;
+    margin-bottom: 1px;
 
 }
 
 #indicator .group-name {
     padding: 10px 10px 0 10px;
+}
+
+#indicator .group-name:hover {
+    opacity: 0.7;
 }
 
 .group-toggle {
@@ -556,10 +592,6 @@
 
 .group-name .col {
     padding: 0;
-}
-
-#indicator .group-name:hover {
-    opacity: 0.7;
 }
 
 .no-context-analysis.hide {
@@ -737,7 +769,7 @@
 
     right: -36px;
     position: absolute;
-    top: 5px;
+    bottm: 5px;
 }
 
 #comparing-toggle:hover {
